--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+
+# production
+/dist
+
+# misc
+.DS_Store
+npm-debug.log*
+
 lib-cov
 *.seed
 *.log
@@ -10,6 +22,3 @@ lib-cov
 pids
 logs
 results
-
-npm-debug.log
-node_modules
