--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "install-node": "6.9.2"
   },
   "dependencies": {
+    "antd": "^2.12.7",
     "babel-runtime": "^6.9.2",
     "dva": "^1.2.1",
+    "dva-loading": "^0.2.1",
     "react": "^15.4.0",
     "react-dom": "^15.4.0"
   },
   "devDependencies": {
+    "babel-plugin-import": "^1.4.0",
     "babel-eslint": "^7.1.1",
     "babel-plugin-dva-hmr": "^0.3.2",
     "babel-plugin-transform-runtime": "^6.9.0",
