--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "react-dom": "^15.4.0"
   },
   "devDependencies": {
-    "babel-plugin-import": "^1.4.0",
     "babel-eslint": "^7.1.1",
     "babel-plugin-dva-hmr": "^0.3.2",
+    "babel-plugin-import": "^1.4.0",
     "babel-plugin-transform-runtime": "^6.9.0",
     "eslint": "^3.12.2",
     "eslint-config-airbnb": "^13.0.0",
@@ -29,6 +29,8 @@
     "eslint-plugin-react": "^6.8.0",
     "expect": "^1.20.2",
     "husky": "^0.12.0",
+    "mockjs": "^1.0.1-beta3",
+    "qs": "^6.5.0",
     "redbox-react": "^1.3.2",
     "roadhog": "^0.5.2"
   }
