--- a/.roadhogrc
+++ b/.roadhogrc
@@ -1,5 +1,5 @@
 {
-  "entry": "src/index.js",
+  "entry": ["src/index.js","babel-polyfill"],
   "env": {
     "development": {
       "extraBabelPlugins": [
